<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modules.userManagement.ui.activity.AddVehicleDetailsActivity">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgVehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/common_170_dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/car_prime_active" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/common_16_dp"
                    android:paddingRight="@dimen/common_16_dp"
                    android:paddingBottom="@dimen/common_16_dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_light"
                        android:text="@string/brand"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/common_12_sp" />

                    <EditText
                        android:id="@+id/edtBrand"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/common_1_dp"
                        android:layout_marginTop="@dimen/common_5_dp"
                        android:background="@color/gray" />

                    <TextView
                        style="@style/textViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/model" />

                    <EditText
                        android:id="@+id/edtModel"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/common_1_dp"
                        android:layout_marginTop="@dimen/common_5_dp"
                        android:background="@color/gray" />

                    <TextView
                        style="@style/textViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vehicle_number" />

                    <EditText
                        android:id="@+id/edtVehicleNum"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/common_1_dp"
                        android:layout_marginTop="@dimen/common_5_dp"
                        android:background="@color/gray" />

                    <TextView
                        style="@style/textViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/year" />

                    <Spinner
                        android:id="@+id/spnYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_home_card" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/common_1_dp"
                        android:background="@color/gray" />

                    <TextView
                        style="@style/textViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/color" />

                    <Spinner
                        android:id="@+id/spnColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_home_card"
                        android:entries="@array/color_list" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/common_1_dp"
                        android:background="@color/gray" />

                    <TextView
                        style="@style/textViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/interior_color" />

                    <Spinner
                        android:id="@+id/spnInteriorColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_home_card"
                        android:entries="@array/color_list" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/common_1_dp"
                        android:background="@color/gray" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/btn_Continue"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_16_dp"
            android:gravity="center"
            android:text="@string/continue_txt"
            android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>